# Copyright (C) 2014-2015 Cryptotronix, LLC.

# This file is part of libjosec

# libjosec is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# any later version.

# libjosec is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.

# You should have received a copy of the GNU Lesser General Public License
# along with libjosec.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT([libjose-c], [0.16.1], [bugs@cryptotronix.com], [josec],
                     [https://github.com/cryptotronix/jose-c])
AC_PREREQ([2.59])
AC_USE_SYSTEM_EXTENSIONS
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_MACRO_DIR([m4])
PKG_PROG_PKG_CONFIG
AM_PROG_AR

AC_ARG_WITH([libglib],
  AS_HELP_STRING([--with-libglib], [Link against libglib]))
AM_CONDITIONAL([HAVE_LIBGLIB], [test "x$with_libglib" = "xyes"])

AS_IF([test "x$with_libglib" = "xyes"], [
  AC_DEFINE([HAVE_LIBGLIB], [1], [Linking against libglib])
  PKG_CHECK_MODULES([LIBGLIB], [glib-2.0])
  AC_DEFINE([HAVE_LIBGLIB], [1], [Have libglib])
])

#Check for libjannson
PKG_CHECK_MODULES([JANSSON], [jansson >= 2.4])

#Check for libyacl
PKG_CHECK_MODULES([YACL], [yacl >= 1.0.0])

# Generate two configuration headers; one for building the library itself with
# an autogenerated template, and a second one that will be installed alongside
# the library.
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_PROG_CC_C_O
AM_PROG_CC_C_O
LT_INIT([static])


AC_ARG_ENABLE([tools],
AS_HELP_STRING([--enable-tools], [Build binary helper tools]))

AM_CONDITIONAL([BUILD_TOOLS], [test "x$enable_tools" = "xyes"])

AC_ARG_WITH([guile],
AS_HELP_STRING([--with-guile], [Build the guile extensions]))
AM_CONDITIONAL([HAVE_GUILE], [test "x$with_guile" = "xyes"])



dnl AS_IF([test "x$with_guile" = "xyes"], [
dnl   # Guile Extensions
dnl   PKG_CHECK_MODULES([GUILE], [guile-2.0])
dnl   GUILE_PROGS
dnl   GUILE_FLAGS
dnl   GUILE_SITE_DIR
dnl ])

AC_SUBST([JOSEC_SO_VERSION], [10:0:0])
#                              | | |
#                       +------+ | +---+
#                       |        |     |
#                    current:revision:age
#                       |        |     |
#                       |        |     +- increment if interfaces have been added
#                       |        |        set to zero if interfaces have been removed
#                       |        |        or changed
#                       |        +- increment if source code has changed
#                       |           set to zero if current is incremented
#                       +- increment if interfaces have been added, removed or changed
AC_SUBST([JOSEC_API_VERSION], [0.12])

# Override the template file name of the generated .pc file, so that there
# is no need to rename the template file when the API version changes.
AC_CONFIG_FILES([Makefile test/Makefile
                 josec.pc:josec.pc.in])
AC_OUTPUT


echo "
     $PACKAGE_NAME version $PACKAGE_VERSION
     Prefix...........: $prefix
     Debug Build......: $debug
     C Compiler.......: $CC $CFLAGS $CPPFLAGS
     C++ Compiler.....: $CXX $CXXFLAGS $CPPFLAGS
     Linker...........: $LD $LDFLAGS $LIBS
     Using OpenSSL....: $with_openssl
     Build Tools......: $enable_tools
     Guile extensions.: $with_guile
"
